--- a/contact.html
+++ b/contact.html
@@ -32,19 +32,41 @@
       <h1>Don't Hesitate to Contact Us!</h1>
     </div>
     <div id="icon-container">
-      <a href="https://www.instagram.com/netflix/?hl=en"
+      <a href="https://www.instagram.com/netflix/?hl=en" target="_blank"
         ><i class="fa-brands fa-instagram" id="instagram"></i
       ></a>
-      <a href="https://www.facebook.com/netflix/"
+      <a href="https://www.facebook.com/netflix/" target="_blank"
         ><i class="fa-brands fa-facebook" id="facebook"></i
       ></a>
       <a
         href="https://twitter.com/netflix?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthors"
+        target="_blank"
         ><i class="fa-brands fa-twitter" id="twitter"></i
       ></a>
-      <a href="https://www.youtube.com/channel/UCWOA1ZGywLbqmigxE4Qlvuw"
+      <a
+        href="https://www.youtube.com/channel/UCWOA1ZGywLbqmigxE4Qlvuw"
+        target="_blank"
         ><i class="fa-brands fa-youtube" id="youtube"></i
       ></a>
+    </div>
+    <div id="support-container">
+      <h1>Contact Support</h1>
+      <div id="form-container">
+        <form id="main-form" action="">
+          <div class="input-box">
+            <input type="text" placeholder="Your Name" id="" />
+            <i class="fa-solid fa-user"></i>
+          </div>
+          <div class="input-box">
+            <input type="text" placeholder="Contact Email" id="" />
+            <i class="fa-solid fa-envelope"></i>
+          </div>
+          <div class="input-box">
+            <input type="text" placeholder="Your Question" id="question-box" />
+          </div>
+          <button type="submit" id="send-button">Send</button>
+        </form>
+      </div>
     </div>
   </body>
 </html>
